add grid with overlay

--- a/_data/picturehouse-sites.yml
+++ b/_data/picturehouse-sites.yml
@@ -1,7 +1,7 @@
 - name: Hackney Picturehouse
   img: hackney.jpg
 
-- name: Ritzy
+- name: The Ritzy
   img: ritzy.jpg
 
 - name: Picturehouse Central
