--- a/_data/picturehouse-sites.yml
+++ b/_data/picturehouse-sites.yml
@@ -1,15 +1,15 @@
 - name: Hackney
   img: hackney.jpg
-  link: http://www.facebook.com/HackneyLivingWage/
+  url: http://www.facebook.com/HackneyLivingWage/
 
 - name: Brixton
   img: brixton.jpg
-  link: https://www.facebook.com/RitzyLivingWage/
+  url: https://www.facebook.com/RitzyLivingWage/
 
 - name: Central
   img: central.jpg
-  link: http://www.facebook.com/CentralLivingWage
+  url: http://www.facebook.com/CentralLivingWage
 
 - name: Crouch End
   img: crouch-end.jpg
-  link: https://www.facebook.com/crouchendlivingwage
+  url: https://www.facebook.com/crouchendlivingwage
