--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,4 +5,4 @@
   url: http://livingstafflivingwage.tictail.com/
 
 - title: Support
-  url: www.change.org/p/picturehouse-pay-proper
+  url: http://www.change.org/p/picturehouse-pay-proper
