justify text, add brighton image, make nav narrower

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -7,7 +7,8 @@
 - 'In February 2017, after many months of campaigning and over 20 strike days, we officially called for a boycott of all Picturehouse and Cineworld Cinemas until they agree to meaningfully discuss our requests for:'
 
 - list:
-    - 'A real Living Wage BECTU recognition (Hackney, Central, Crouch End, Brighton)'
+    - 'A real Living Wage'
+    - 'BECTU recognition (Hackney, Central, Crouch End, Brighton)'
     - 'Company sick pay for all staff from day one of employment'
     - 'Company maternity/paternity/adoption pay fair pay rises for supervisors, managers, chefs, sound technicians and projectionists'
 
