--- a/_data/picturehouse-sites.yml
+++ b/_data/picturehouse-sites.yml
@@ -17,3 +17,7 @@
 - name: Brighton
   img: brighton.jpg
   url: https://www.facebook.com/UnioniseDukes
+
+- name: East Dulwich
+  img: east-dulwich.jpg
+  url: https://www.facebook.com/edphlivingwage
